<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Notifications"
        android:key="pref_key_notification_group">

        <PreferenceScreen
            android:key="@string/notif_category_key"
            android:title="Weather updates"
            android:persistent="false"
            android:summary="Enable on-going weather notifications">

            <SwitchPreference
                android:key="@string/follow_notif_key"
                android:title="Follow me"
                android:summary="Display weather for my current location"
                android:defaultValue="false" />

            <PreferenceCategory
                android:title="Saved locations">
                <!-- Selectable locations will be added to the screen, from the list of saved locations -->

            </PreferenceCategory>

        </PreferenceScreen>

        <SwitchPreference
            android:key="@string/alert_notif_key"
            android:title="Show weather alerts"
            android:summary="Create a push notification for weather alerts and warnings"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="@string/summary_notif_key"
            android:title="Show weather summary"
            android:summary="Create a push notification containing a summary of the day's weather forecast"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Units"
        android:key="@string/units_group_key">

        <ListPreference
            android:key="@string/units_list_key"
            android:title="Units of measure"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Theme"
        android:key="@string/theme_group_key">

        <SwitchPreference
            android:key="@string/theme_change_key"
            android:title="Enable color theme updates"
            android:summary="If enabled, the color theme will change according to current time of day"
            android:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Support"
        android:key="@string/support_group_key">

        <!-- Opens WebView to display the info about the app, including library attrs-->
        <Preference
            android:title="About this app"
            android:key="@string/support_about_key" />

        <Preference
            android:title="Tutorial"
            android:key="@string/support_tutorial_key">

            <!-- Intent opens special tutorial activity -->
            <intent android:targetPackage="dean.weather"
                android:targetClass="dean.weather.tutorialActivity" >
            </intent>
        </Preference>

        <!-- Shows modal that is connected with Google Merchant API, shows IAPs to donate-->
        <Preference
            android:title="Support developer"
            android:key="@string/support_donate_key" />

    </PreferenceCategory>
</PreferenceScreen>